@@ -4,7 +4,7 @@ const REG_NUMBER = /[\d,.]+/;
 const REG_COLOR = /^#([A-F0-9]{3}|[A-F0-9]{6}|[A-F0-9]{8})$/i;
 const REG_ICON = /^(ti|far|fab|fad|fal|fas|fa)?\s(fa|ti)-[a-z0-9-]+$/;
 
-function check_string(meta, error, value, errplus) {
+function check_string(meta, error, value, errplus, path) {
 
 	var type = typeof(value);
 
@@ -23,8 +23,7 @@ function check_string(meta, error, value, errplus) {
 	}
 
 	if (meta.$$REQUIRED && !value) {
-		// error.push(errplus + meta.$$ID + '.required');
-		error.push(errplus + meta.$$ID);
+		error.push(errplus + meta.$$ID, undefined, path);
 		return;
 	}
 
@@ -34,14 +33,12 @@ function check_string(meta, error, value, errplus) {
 	var len = value.length;
 
 	if (meta.maxLength && len > meta.maxLength) {
-		// error.push(errplus + meta.$$ID + '.maxlength');
-		error.push(errplus + meta.$$ID);
+		error.push(errplus + meta.$$ID, undefined, path);
 		return;
 	}
 
 	if (meta.minLength && len < meta.minLength) {
-		// error.push(errplus + meta.$$ID + '.minlength');
-		error.push(errplus + meta.$$ID);
+		error.push(errplus + meta.$$ID, undefined, path);
 		return;
 	}
 
@@ -51,71 +48,64 @@ function check_string(meta, error, value, errplus) {
 			case 'email':
 				value = value.replace(/\s/g, '').toLowerCase();
 				if (value && !value.isEmail()) {
-					// error.push(errplus + meta.$$ID + '.invalid');
-					error.push(errplus + meta.$$ID);
+					error.push(errplus + meta.$$ID, undefined, path);
 					return;
 				}
 				break;
 			case 'phone':
 				value = value.replace(/\s/g, '').toLowerCase();
 				if (value && !value.isPhone()) {
-					// error.push(errplus + meta.$$ID + '.invalid');
-					error.push(errplus + meta.$$ID);
+					error.push(errplus + meta.$$ID, undefined, path);
 					return;
 				}
 				break;
 			case 'url':
 				if (value && !value.isURL()) {
-					// error.push(errplus + meta.$$ID + '.invalid');
-					error.push(errplus + meta.$$ID);
+					error.push(errplus + meta.$$ID, undefined, path);
 					return;
 				}
 				break;
 			case 'zip':
 				if (value && !value.isZIP()) {
-					// error.push(errplus + meta.$$ID + '.invalid');
-					error.push(errplus + meta.$$ID);
+					error.push(errplus + meta.$$ID, undefined, path);
 					return;
 				}
 				break;
 			case 'guid':
 				if (value && !value.isGUID()) {
-					// error.push(errplus + meta.$$ID + '.invalid');
-					error.push(errplus + meta.$$ID);
+					error.push(errplus + meta.$$ID, undefined, path);
 					return;
 				} else if (!value)
 					value = null;
 				break;
 			case 'uid':
 				if (value && !value.isUID()) {
-					// error.push(errplus + meta.$$ID + '.invalid');
-					error.push(errplus + meta.$$ID);
+					error.push(errplus + meta.$$ID, undefined, path);
 					return;
 				} else if (!value)
 					value = null;
 				break;
 			case 'json':
 				if (value && !value.isJSON()) {
-					// error.push(errplus + meta.$$ID + '.invalid');
-					error.push(errplus + meta.$$ID);
+					error.push(errplus + meta.$$ID, undefined, path);
 					return;
 				}
 				break;
 			case 'base64':
 				if (value && !value.isBase64()) {
-					error.push(errplus + meta.$$ID);
+					error.push(errplus + meta.$$ID, undefined, path);
 					return;
 				}
 				break;
 			case 'color':
 				if (value && !REG_COLOR.test(value)) {
-					error.push(errplus + meta.$$ID);
+					error.push(errplus + meta.$$ID, undefined, path);
 					return;
 				}
 				break;
 			case 'icon':
 				if (value && !REG_ICON.test(value)) {
-					error.push(errplus + meta.$$ID);
+					error.push(errplus + meta.$$ID, undefined, path);
 					return;
 				}
 				break;
@@ -137,9 +127,8 @@ function check_string(meta, error, value, errplus) {
 	}
 
 	if (meta.enum instanceof Array) {
-		if (meta.enum.indexOf(value) === -1) {
-			// error.push(errplus + meta.$$ID + '.enum');
-			error.push(errplus + meta.$$ID);
+		if (!meta.enum.includes(value)) {
+			error.push(errplus + meta.$$ID, undefined, path);
 			return;
 		}
 	}
@@ -147,7 +136,7 @@ function check_string(meta, error, value, errplus) {
 	return value;
 }
 
-function check_number(meta, error, value, errplus) {
+function check_number(meta, error, value, errplus, path) {
 
 	var type = typeof(value);
 
@@ -165,8 +154,7 @@ function check_number(meta, error, value, errplus) {
 
 	if (meta.$$REQUIRED) {
 		if (value == null) {
-			// error.push(errplus + meta.$$ID + '.required');
-			error.push(errplus + meta.$$ID);
+			error.push(errplus + meta.$$ID, undefined, path);
 			return;
 		}
 	}
@@ -176,32 +164,28 @@ function check_number(meta, error, value, errplus) {
 
 	if (meta.multipleOf) {
 		if (value % meta.multipleOf !== 0) {
-			// error.push(errplus + meta.$$ID + '.multipleof');
-			error.push(errplus + meta.$$ID);
+			error.push(errplus + meta.$$ID, undefined, path);
 			return;
 		}
 	}
 
 	if (meta.maximum) {
 		if (value > meta.maximum) {
-			// error.push(errplus + meta.$$ID + '.maximum');
-			error.push(errplus + meta.$$ID);
+			error.push(errplus + meta.$$ID, undefined, path);
 			return;
 		}
 	}
 
 	if (meta.exclusiveMaximum) {
 		if (value >= meta.exclusiveMaximum) {
-			// error.push(errplus + meta.$$ID + '.exclusivemaximum');
-			error.push(errplus + meta.$$ID);
+			error.push(errplus + meta.$$ID, undefined, path);
 			return;
 		}
 	}
 
 	if (meta.minimum) {
 		if (value < meta.minimum) {
-			// error.push(errplus + meta.$$ID + '.minimum');
-			error.push(errplus + meta.$$ID);
+			error.push(errplus + meta.$$ID, undefined, path);
 			return;
 		}
 	}
@@ -209,15 +193,13 @@ function check_number(meta, error, value, errplus) {
 	switch (meta.subtype) {
 		case 'smallint':
 			if (value < -32767 || value > 32767) {
-				// error.push(errplus + meta.$$ID + '.invalid');
-				error.push(errplus + meta.$$ID);
+				error.push(errplus + meta.$$ID, undefined, path);
 				return;
 			}
 			break;
 		case 'tinyint':
 			if (value < 0 || value > 255) {
-				// error.push(errplus + meta.$$ID + '.invalid');
-				error.push(errplus + meta.$$ID);
+				error.push(errplus + meta.$$ID, undefined, path);
 				return;
 			}
 			break;
@@ -225,8 +207,7 @@ function check_number(meta, error, value, errplus) {
 
 	if (meta.exclusiveMinimum) {
 		if (value <= meta.exclusiveMinimum) {
-			// error.push(errplus + meta.$$ID + '.exclusiveminimum');
-			error.push(errplus + meta.$$ID);
+			error.push(errplus + meta.$$ID, undefined, path);
 			return;
 		}
 	}
@@ -234,7 +215,7 @@ function check_number(meta, error, value, errplus) {
 	return value;
 }
 
-function check_boolean(meta, error, value, errplus) {
+function check_boolean(meta, error, value, errplus, path) {
 
 	var type = typeof(value);
 	if (type !== 'boolean')
@@ -246,8 +227,7 @@ function check_boolean(meta, error, value, errplus) {
 			errplus = '';
 
 		if (value == null) {
-			// error.push(errplus + meta.$$ID + '.required');
-			error.push(errplus + meta.$$ID);
+			error.push(errplus + meta.$$ID, undefined, path);
 			return;
 		}
 	}
@@ -256,7 +236,7 @@ function check_boolean(meta, error, value, errplus) {
 		return value;
 }
 
-function check_date(meta, error, value, errplus) {
+function check_date(meta, error, value, errplus, path) {
 
 	if (!(value instanceof Date))
 		value = value ? (value + '').parseDate() : null;
@@ -270,8 +250,7 @@ function check_date(meta, error, value, errplus) {
 			errplus = '';
 
 		if (value == null) {
-			// error.push(meta.$$ID + '.required');
-			error.push(meta.$$ID);
+			error.push(errplus + meta.$$ID, undefined, path);
 			return;
 		}
 	}
@@ -296,25 +275,24 @@ function read_def(ref, definitions) {
 	}
 }
 
-function check_array(meta, error, value, stop, definitions) {
+function check_array(meta, error, value, stop, definitions, path) {
 
 	if (!(value instanceof Array)) {
 		if (meta.$$REQUIRED) {
-			// error.push(meta.$$ID + '.required');
-			error.push(meta.$$ID);
+			error.push(meta.$$ID, undefined, path);
 		}
 		return;
 	}
 
 	if (!value.length) {
 		if (meta.$$REQUIRED) {
-			// error.push(meta.$$ID + '.required');
-			error.push(meta.$$ID);
+			error.push(meta.$$ID, undefined, path);
 			return;
 		}
 		return value;
 	}
 
+	var currentpath = path;
 	var response;
 	var tmp;
 
@@ -323,7 +301,6 @@ function check_array(meta, error, value, stop, definitions) {
 		for (var i = 0; i < value.length; i++) {
 			var val = value[i];
 			var type = meta.items[i];
-
 			if (type) {
 				switch (type) {
 					case '$ref':
@@ -337,8 +314,7 @@ function check_array(meta, error, value, stop, definitions) {
 							response.push(tmp);
 							break;
 						} else {
-							// error.push(meta.$$ID + '.type');
-							error.push(meta.$$ID);
+							error.push(meta.$$ID, undefined, currentpath);
 							return;
 						}
 					case 'boolean':
@@ -348,8 +324,7 @@ function check_array(meta, error, value, stop, definitions) {
 							response.push(tmp);
 							break;
 						} else {
-							// error.push(meta.$$ID + '.type');
-							error.push(meta.$$ID);
+							error.push(meta.$$ID, undefined, currentpath);
 							return;
 						}
 					case 'date':
@@ -358,8 +333,7 @@ function check_array(meta, error, value, stop, definitions) {
 							response.push(tmp);
 							break;
 						} else {
-							// error.push(meta.$$ID + '.type');
-							error.push(meta.$$ID);
+							error.push(meta.$$ID, undefined, currentpath);
 							return;
 						}
 					case 'object':
@@ -368,8 +342,7 @@ function check_array(meta, error, value, stop, definitions) {
 							response.push(tmp);
 							break;
 						} else {
-							// error.push(meta.$$ID + '.type');
-							error.push(meta.$$ID);
+							error.push(meta.$$ID, undefined, currentpath);
 							return;
 						}
 					case 'array':
@@ -378,25 +351,22 @@ function check_array(meta, error, value, stop, definitions) {
 							response.push(tmp);
 							break;
 						} else {
-							// error.push(meta.$$ID + '.type');
-							error.push(meta.$$ID);
+							error.push(meta.$$ID, undefined, currentpath);
 							return;
 						}
 					case 'string':
 					default:
-						tmp = check_string(type, error, val);
+						tmp = check_string(type, error, val, null, currentpath);
 						if (tmp != null) {
 							response.push(tmp);
 							break;
 						} else {
-							// error.push(meta.$$ID + '.type');
-							error.push(meta.$$ID);
+							error.push(meta.$$ID, undefined, currentpath);
 							return;
 						}
 				}
 			} else if (!type && !meta.additionalItems) {
-				// error.push(meta.$$ID + '.additionalitems');
-				error.push(meta.$$ID);
+				error.push(meta.$$ID, undefined, currentpath);
 				return;
 			}
 		}
@@ -414,7 +384,7 @@ function check_array(meta, error, value, stop, definitions) {
 					tmp = transform(ref, newerror, val);
 					if (newerror.length) {
 						for (var err of newerror)
-							error.push(ref.$$ID + '.' + err, '@', null, i);
+							error.push(ref.$$ID + '.' + err, '@', path, i);
 					} else if (tmp != null && (!meta.uniqueItems || response.indexOf(tmp) === -1))
 						response.push(tmp);
 					continue;
@@ -422,41 +392,42 @@ function check_array(meta, error, value, stop, definitions) {
 					continue;
 			}
 
+
 			switch (meta.items.type) {
 				case 'number':
 				case 'integer':
-					tmp = check_number(meta.items, error, val);
+					tmp = check_number(meta.items, error, val, null, currentpath);
 					if (tmp != null && (!meta.uniqueItems || response.indexOf(tmp) === -1))
 						response.push(tmp);
 					break;
 				case 'boolean':
 				case 'bool':
-					tmp = check_boolean(meta.items, error, val);
+					tmp = check_boolean(meta.items, error, val, null, currentpath);
 					if (tmp != null && (!meta.uniqueItems || response.indexOf(tmp) === -1))
 						response.push(tmp);
 					break;
 				case 'date':
-					tmp = check_date(meta.items, error, val);
+					tmp = check_date(meta.items, error, val, null, currentpath);
 					if (tmp != null && (!meta.uniqueItems || response.indexOf(tmp) === -1))
 						response.push(tmp);
 					break;
 				case 'object':
 					var newerror = new ErrorBuilder();
-					tmp = check_object(meta.items, newerror, val, stop, definitions);
+					tmp = check_object(meta.items, newerror, val, stop, definitions, currentpath);
 					if (newerror.length) {
 						for (var err of newerror.items)
-							error.push(meta.$$ID + '.' + err.name, err.error, null, i);
+							error.push(meta.$$ID + '.' + err.name, err.error, currentpath, i);
 					} else if (tmp != null && (!meta.uniqueItems || response.indexOf(tmp) === -1))
 						response.push(tmp);
 					break;
 				case 'array':
-					tmp = check_array(meta.items, error, value, stop, definitions);
+					tmp = check_array(meta.items, error, value, stop, definitions, currentpath);
 					if (tmp != null && (!meta.uniqueItems || response.indexOf(tmp) === -1))
 						response.push(tmp);
 					break;
 				case 'string':
 				default:
-					tmp = check_string(meta.items, error, val);
+					tmp = check_string(meta.items, error, val, null, currentpath);
 					if (tmp != null && (!meta.uniqueItems || response.indexOf(tmp) === -1))
 						response.push(tmp);
 					break;
@@ -466,32 +437,28 @@ function check_array(meta, error, value, stop, definitions) {
 		response = meta.uniqueItems ? [...new Set(value)] : value;
 
 	if (!response.length && meta.$$REQUIRED) {
-		// error.push(meta.$$ID + '.required');
-		error.push(meta.$$ID);
+		error.push(meta.$$ID, undefined, currentpath);
 		return;
 	}
 
 	if (meta.minItems && response.length < meta.minItems) {
-		// error.push(meta.$$ID + '.minitems');
-		error.push(meta.$$ID);
+		error.push(meta.$$ID, undefined, currentpath);
 		return;
 	}
 
 	if (meta.maxItems && response.length < meta.maxItems) {
-		// error.push(meta.$$ID + '.maxitems');
-		error.push(meta.$$ID);
+		error.push(meta.$$ID, undefined, currentpath);
 		return;
 	}
 
 	return response;
 }
 
-function check_object(meta, error, value, response, stop, definitions) {
+function check_object(meta, error, value, response, stop, definitions, path) {
 
 	if (!value || typeof(value) !== 'object') {
 		if (meta.$$REQUIRED) {
-			// error.push(meta.$$ID + '.required');
-			error.push(meta.$$ID);
+			error.push(meta.$$ID, undefined, path);
 		}
 		return;
 	}
@@ -521,17 +488,17 @@ function check_object(meta, error, value, response, stop, definitions) {
 			return;
 
 		if (meta.maxProperties && count > meta.maxProperties) {
-			// error.push(meta.$$ID + '.maxproperties');
-			error.push(meta.$$ID);
+			error.push(meta.$$ID, undefined, path);
 			return;
 		}
 
+		var currentpath = (path ? (path + '.') : '') + key;
 		var val = value[key];
 
 		switch (prop.type) {
 			case 'number':
 			case 'integer':
-				tmp = check_number(prop, error, val);
+				tmp = check_number(prop, error, val, null, currentpath);
 				if (tmp != null) {
 					response[key] = tmp;
 					count++;
@@ -539,21 +506,21 @@ function check_object(meta, error, value, response, stop, definitions) {
 				break;
 			case 'boolean':
 			case 'bool':
-				tmp = check_boolean(prop, error, val);
+				tmp = check_boolean(prop, error, val, null, currentpath);
 				if (tmp != null) {
 					response[key] = tmp;
 					count++;
 				}
 				break;
 			case 'date':
-				tmp = check_date(prop, error, val);
+				tmp = check_date(prop, error, val, null, currentpath);
 				if (tmp != null) {
 					response[key] = tmp;
 					count++;
 				}
 				break;
 			case 'string':
-				tmp = check_string(prop, error, val);
+				tmp = check_string(prop, error, val, null, currentpath);
 				if (tmp != null) {
 					response[key] = tmp;
 					count++;
@@ -561,7 +528,7 @@ function check_object(meta, error, value, response, stop, definitions) {
 				break;
 			case 'object':
 				if (prop.properties) {
-					tmp = check_object(prop, error, val, null, null, definitions);
+					tmp = check_object(prop, error, val, null, null, definitions, currentpath);
 					if (tmp != null) {
 						response[key] = tmp;
 						count++;
@@ -589,7 +556,7 @@ function check_object(meta, error, value, response, stop, definitions) {
 				}
 				break;
 			case 'array':
-				tmp = check_array(prop, error, val, null, definitions);
+				tmp = check_array(prop, error, val, null, definitions, currentpath);
 				if (tmp != null) {
 					response[key] = tmp;
 					count++;
@@ -599,21 +566,17 @@ function check_object(meta, error, value, response, stop, definitions) {
 				if (prop.$ref) {
 					var ref = F.jsonschemas[prop.$ref];
 					if (ref) {
-						tmp = check_object(ref, error, val, null, null, definitions);
+						tmp = check_object(ref, error, val, null, null, definitions, currentpath);
 						if (tmp != null) {
 							response[key] = tmp;
 							count++;
-						} else if (prop.$$REQUIRED) {
-							// error.push(prop.ID + '.required');
-							error.push(prop.ID);
-						}
-					} else {
-						// error.push(prop.ID + '.reference');
-						error.push(prop.ID);
-					}
+						} else if (prop.$$REQUIRED)
+							error.push(prop.ID, undefined, currentpath);
+					} else
+						error.push(prop.ID, undefined, currentpath);
 				} else {
 					// String
-					tmp = check_string(prop, error, val);
+					tmp = check_string(prop, error, val, null, currentpath);
 					if (tmp != null) {
 						response[key] = tmp;
 						count++;
@@ -624,8 +587,7 @@ function check_object(meta, error, value, response, stop, definitions) {
 	}
 
 	if (meta.minProperties && count < meta.minProperties) {
-		// error.push(meta.$$ID + '.minproperties');
-		error.push(meta.$$ID);
+		error.push(meta.$$ID, undefined, path);
 		return;
 	}
 
@@ -633,35 +595,35 @@ function check_object(meta, error, value, response, stop, definitions) {
 		return response;
 }
 
-function transform(meta, error, value, stop) {
+function transform(meta, error, value, stop, path) {
 
 	var output;
 
 	switch (meta.type) {
 		case 'string':
-			output = check_string(meta, error, value);
+			output = check_string(meta, error, value, null, path);
 			break;
 		case 'number':
 		case 'integer':
 		case 'float':
 		case 'decimal':
-			output = check_number(meta, error, value);
+			output = check_number(meta, error, value, null, path);
 			break;
 		case 'boolean':
 		case 'bool':
-			output = check_boolean(meta, error, value);
+			output = check_boolean(meta, error, value, null, path);
 			break;
 		case 'date':
-			output = check_date(meta, error, value);
+			output = check_date(meta, error, value, null, path);
 			break;
 		case 'object':
-			output = check_object(meta, error, value, null, stop, meta);
+			output = check_object(meta, error, value, null, stop, meta, path);
 			break;
 		case 'array':
-			output = check_array(meta, error, value, stop, meta);
+			output = check_array(meta, error, value, stop, meta, path);
 			break;
 		default:
-			error.push('.type');
+			error.push('.type', undefined, path);
 			return;
 	}
 
